// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LinkList /> Default story renders snapshot 1`] = `
<ul
  class="link-list"
>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 1
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 2
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 3
      </div>
    </a>
  </li>
</ul>
`;

exports[`<LinkList /> Horizontal story renders snapshot 1`] = `
<ul
  class="link-list link-list--horizontal"
>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 1
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 2
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 3
      </div>
    </a>
  </li>
</ul>
`;

exports[`<LinkList /> IconAfterText story renders snapshot 1`] = `
<ul
  class="link-list"
>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 1
      </div>
      <svg
        aria-hidden="true"
        class="icon link-list__icon"
        fill="currentColor"
        height="0.875rem"
        style="--icon-size: 0.875rem;"
        viewBox="0 0 24 24"
        width="0.875rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.025 22L6.25 20.225L14.475 12L6.25 3.775L8.025 2L18.025 12L8.025 22Z"
        />
      </svg>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 2
      </div>
      <svg
        aria-hidden="true"
        class="icon link-list__icon"
        fill="currentColor"
        height="0.875rem"
        style="--icon-size: 0.875rem;"
        viewBox="0 0 24 24"
        width="0.875rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.025 22L6.25 20.225L14.475 12L6.25 3.775L8.025 2L18.025 12L8.025 22Z"
        />
      </svg>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 3
      </div>
      <svg
        aria-hidden="true"
        class="icon link-list__icon"
        fill="currentColor"
        height="0.875rem"
        style="--icon-size: 0.875rem;"
        viewBox="0 0 24 24"
        width="0.875rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.025 22L6.25 20.225L14.475 12L6.25 3.775L8.025 2L18.025 12L8.025 22Z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`<LinkList /> Lined story renders snapshot 1`] = `
<ul
  class="link-list link-list--lined"
>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 1
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 2
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 3
      </div>
    </a>
  </li>
</ul>
`;

exports[`<LinkList /> Responsive story renders snapshot 1`] = `
<ul
  class="link-list link-list--responsive"
>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 1
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 2
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 3
      </div>
    </a>
  </li>
</ul>
`;

exports[`<LinkList /> Small story renders snapshot 1`] = `
<ul
  class="link-list link-list--sm"
>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 1
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 2
      </div>
    </a>
  </li>
  <li
    class="link-list__item"
  >
    <a
      class="link-list__link"
      href="#"
    >
      <div
        class="link-list__text"
      >
        Link List Item 3
      </div>
    </a>
  </li>
</ul>
`;
